src/test/ui/impl-trait/issues/issue-88236-2.stderr
error: implementation of `Hrtb` is not general enough
  --> $DIR/issue-88236-2.rs:17:5
   |
LL |     &()
   |     ^^^ implementation of `Hrtb` is not general enough
   |
   = note: `Hrtb<'0>` would have to be implemented for the type `&()`, for any lifetime `'0`...
   = note: ...but `Hrtb<'1>` is actually implemented for the type `&'1 ()`, for some specific lifetime `'1`

error: implementation of `Hrtb` is not general enough
  --> $DIR/issue-88236-2.rs:20:5
   |
LL |     x
   |     ^ implementation of `Hrtb` is not general enough
   |
   = note: `&()` must implement `Hrtb<'0>`, for any lifetime `'0`...
   = note: ...but `Hrtb<'_>` is actually implemented for the type `&()`

error: aborting due to 2 previous errors

